# audio-ai

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  pipeline-improvements.md
src/: ai_client.rs  audio_analysis.rs  comparison.rs  lib.rs  main.rs  processor.rs  streaming.rs
tests/: ai_integration_tests.rs  comparison_tests.rs  generate_test_samples.py  integration_tests.rs  streaming_tests.rs
tests/data/: README.md  midi_c_major_chord.mid  midi_c_major_scale.mid  midi_simple_melody.mid
